Sidebar - overflow FIX

--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,22 @@ a {
 main {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 #sidebar {
   height: calc(100% - 80px);
   width: 250px;
   min-height: 300px;
   background-color: black;
+}
+
+#sidebar .top-bottom-sidebar {
+  height: 100%;
+}
+#sidebar .top-bottom-sidebar .top-sidebar {
+  height: 70%;
+  overflow: hidden;
 }
 
 #up_bar {
@@ -65,6 +74,7 @@ main {
   height: 80px;
   width: 100%;
   background-color: #232323;
+  overflow: hidden;
 }
 /* ----------------------------------------- */
 
@@ -77,7 +87,9 @@ main {
   border-left: 2px solid #c0fe35;
   padding-left: 10px;
 }
-
+.top-bottom-sidebar {
+  height: 30%;
+}
 
 #sidebar nav ul li,
 #sidebar .logo,
@@ -97,6 +109,7 @@ main {
 
 #sidebar .top-bottom-sidebar .top-sidebar #playlist {
   overflow-y: auto;
+  height: 80%;
 }
 
 .line {
@@ -266,7 +279,7 @@ justify-content: flex-start;
   align-items: center;
 }
 #player .player_center .time {
-  width: 500px;
+  width: 100%;
 }
 #player .player_center .control {
   width: 250px;
@@ -314,8 +327,9 @@ justify-content: flex-start;
 }
 .player_center {
   /* border: 1px solid white; */
-  width: 600px;
+  width: 40%;
   height: 50px;
+  min-width: 300px;
 }
 .player_dx {
   /* border: 1px solid white; */
@@ -324,4 +338,12 @@ justify-content: flex-start;
   align-items: center;
   width: 250px;
   height: 50px;
+}
+
+
+
+@media query screen and screen {
+
+}
+
 }
